css/styles.css
body {
  text-align: center;
  font-family: "Montserrat", sans-serif;
}

.navbar {
  width: 5rem;
  height: 100vh;
  position: fixed;
  background-color: #1b262c;
}

.navbar-nav {
  list-style: none;
  padding: 0;
  margin: 0;
  align-items: center;
}
.nav-item {
  font-size: 2.5rem;
  margin-top: 50px;
}

.nav-link {
  text-decoration: none;
}

.colored-section {
  background-color: #0f4c75;
  margin-left: 5rem;
}

.white-section {
  background-color: #bbcfff;
  margin-left: 5rem;
}

.container-fluid {
  padding: 7% 15%;
}

.download-btn {
  margin: 3% 0;
}

#title .container-fluid {
  padding: 3% 15% 7%;
}

.title-container {
  padding-top: 7%;
}

.heading-container {
  text-align: center;
}

.title-heading {
  text-align: left;
  color: #fff;
  font-size: 3.5rem;
  line-height: 1.5;
  font-weight: 900;
}

.title-img {
  max-width: 100%;
}

.cta-heading {
  font-weight: 700;
  font-size: 3rem;
}

/* footer */
#footer {
  color: #fff;
}

.footer-ico {
  padding: 2%;
  font-size: 2rem;
}

@media (max-width: 990px) {
  /* navbar */
  @media only screen and (max-width: 600px) {
    .navbar {
      bottom: 0;
      width: 100vw;
      height: 4rem;
      z-index: 2;
    }
    .navbar-brand {
      display: none;
    }
    .navbar-nav {
      display: flex;
      flex-direction: row;
      justify-content: center;
      align-items: center;
    }
    .nav-item {
      margin-top: 0;
      font-size: 2rem;
    }
    .nav-link {
      margin-left: 65px;

      padding: 0;
    }
  }

  .colored-section {
    margin-left: 0;
  }
  .white-section {
    margin-left: 0;
  }

  #footer {
    margin-bottom: 4rem;
  }

  /* all above code is for navbar */
  .title-heading {
    text-align: center;
    font-size: 2rem;
    font-weight: 700;
  }

  .title-img {
    margin-top: 25px;
  }

  .cta-heading {
    font-size: 1.5rem;
  }

  .footer-text {
    font-size: 0.5rem;
  }

  .logo-text {
    font-size: 2rem;
    font-size: 0;
  }
}

